@@ -7,14 +7,14 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.6 (gritter) 11/21/05";
+	"@(#)/usr/ucb/otfdump.sl	5.7 (gritter) 11/21/05";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.6 (gritter) 11/21/05";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.6 (gritter) 11/21/05";
+static const char sccsid[] USED = "@(#)dpost.sl  5.7 (gritter) 11/21/05";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.7 (gritter) 11/21/05";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.6 (gritter) 11/21/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.7 (gritter) 11/21/05";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.6 (gritter) 11/21/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.7 (gritter) 11/21/05";
 #endif	/* !DUMP, !NROFF */
 /* SLIST */
 /*
@@ -67,13 +67,13 @@ troff.d/dpost.d/dpost_draw.c: * Sccsid @(#)dpost_draw.c	1.4 (gritter) 11/21/05
 troff.d/dpost.d/dpost_makedev.c: * Sccsid @(#)dpost_makedev.c	1.1 (gritter) 9/4/05
 troff.d/dpost.d/dpost_otf.c: * Sccsid @(#)dpost_otf.c	1.3 (gritter) 10/13/05
 troff.d/dpost.d/ext.h: * Sccsid @(#)ext.h	1.3 (gritter) 8/9/05
-troff.d/dpost.d/gen.h: * Sccsid @(#)gen.h	1.11 (gritter) 11/21/05
+troff.d/dpost.d/gen.h: * Sccsid @(#)gen.h	1.12 (gritter) 11/21/05
 troff.d/dpost.d/getopt.c: * Sccsid @(#)getopt.c	1.8 (gritter) 8/2/05
 troff.d/dpost.d/glob.c: * Sccsid @(#)glob.c	1.3 (gritter) 8/9/05
-troff.d/dpost.d/misc.c: * Sccsid @(#)misc.c	1.7 (gritter) 10/2/05
+troff.d/dpost.d/misc.c: * Sccsid @(#)misc.c	1.8 (gritter) 11/21/05
 troff.d/dpost.d/path.h: * Sccsid @(#)path.h	1.3 (gritter) 8/9/05
 troff.d/dpost.d/pictures.c: * Sccsid @(#)pictures.c	1.5 (gritter) 11/21/05
-troff.d/dpost.d/ps_include.c: * Sccsid @(#)ps_include.c	1.5 (gritter) 8/13/05
+troff.d/dpost.d/ps_include.c: * Sccsid @(#)ps_include.c	1.6 (gritter) 11/21/05
 troff.d/dpost.d/request.c: * Sccsid @(#)request.c	1.3 (gritter) 8/9/05
 troff.d/dpost.d/request.h: * Sccsid @(#)request.h	1.3 (gritter) 8/9/05
 */
